welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:7: error: reassignment to val
      a=a+1
       ^close10:13: error: reassignment to val
      a=a-1
       ^close10:19: error: reassignment to val
      b=b+1
       ^close10:25: error: reassignment to val
      a=a-1
       ^